--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UAS_DPM_TI5A_AJAAPPS</string>
+    <string name="kricu">Kricu Stik Telur Cumi</string>
+    <string name="harga">Rp38.000,-</string>
+    <string name="deskripsi">Deskripsi</string>
 </resources>
